--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@ to{opacity:1;transform:scale(1)}
 
 <!-- PAGE 1 -->
 <div class="page active" id="p1">
-  <h3>Ek chhoti si kahani… 🌙</h3>
-  <p>Jo sirf AAP ke liye hai.</p>
+  <h3>Ek chhoti si kahani… 🫶🏼😘</h3>
+  <p>Jo sirf AAP ke liye hai kanak.</p>
   <button onclick="go(2)">Next</button>
 </div>
 
@@ -263,7 +263,7 @@ function go(n){
  document.querySelectorAll(".page").forEach(p=>p.classList.remove("active"));
  document.getElementById("p"+n).classList.add("active");
  if(!started){
-  music.currentTime=30;
+  music.currentTime=49;
   music.play();
   started=true;
  }
@@ -283,4 +283,5 @@ window.addEventListener("devicemotion",e=>{
 </script>
 
 </body>
+
 </html>
